<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="10dp" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/general"
        android:textAllCaps="true" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="#424242" />

    <view
        android:id="@+id/mptcp_enable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        class="be.uclouvain.mptcp.control.MPTCPEnableSwitch"
        android:paddingBottom="20dp"
        android:paddingTop="10dp"
        android:text="@string/mptcp_enable" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/interfaces"
        android:textAllCaps="true" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="#424242"
        android:paddingBottom="5dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/wifi" />

        <Switch
            android:id="@+id/use_wifi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/wifi" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="50dp" >

        <CheckBox
            android:id="@+id/wifi_backup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/backup" />

    </FrameLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#424242"
        android:paddingBottom="5dp"
        android:paddingTop="5dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/data" />

        <Switch
            android:id="@+id/use_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/data" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="50dp" >

        <CheckBox
            android:id="@+id/data_backup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/backup" />
    </FrameLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#424242"
        android:paddingBottom="5dp"
        android:paddingTop="5dp" />

</LinearLayout>
